Bug 342942 - Krita crashes while using shaped gradient
Summary: Krita crashes while using shaped gradient
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-17 05:39 UTC by Raghavendra kamath
Modified: 2015-01-25 11:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita crashes while using shaped gradient - Backtrace (64 bytes, text/plain)
2015-01-18 22:29 UTC, mvowada
Details
Krita crashes while using shaped gradient - Backtrace (17.23 KB, text/plain)
2015-01-18 22:35 UTC, mvowada
Details
shaped gradient test file (3.04 MB, image/kra)
2015-01-19 02:26 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2015-01-17 05:39:27 UTC
While applying shaped gradient in some complex shapes krita crashes, and some times the shaped gradient doesn't give expected results

Reproducible: Always

Steps to Reproduce:
1.Open krita and select some complex shapes ( you can download the document i'm using here - https://dl.dropboxusercontent.com/u/37777793/shaped-gradient-test.kra )
2.Apply shaped gradient 
3.



here is the output f gdb : 


raghu@raghu:~$ gdb krita
GNU gdb (Ubuntu 7.8-1ubuntu4) 7.8.0.20141001-cvs
Copyright (C) 2014 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from krita...done.
(gdb) run
Starting program: /home/raghu/kde4/inst/bin/krita 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".

(krita:6625): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",

(krita:6625): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",
/usr/share/themes/Orchis/gtk-2.0/Apps/xfce.rc:150: error: invalid string constant "combo", expected valid string constant
[New Thread 0x7fffde3a9700 (LWP 6629)]
[New Thread 0x7fffdd254700 (LWP 6630)]
################################### 
# Adding a tablet device: Wacom Intuos4 6x9 stylus 
Device Type: "Stylus" 
# Axes limits data 
X:        0 44704 
Y:        0 27940 
Z:        0 0 
Pressure: 0 2048 
Rotation: -900 899 
T. Pres:  0 0 
################################### 
# Adding a tablet device: Wacom Intuos4 6x9 eraser 
Device Type: "XFreeEraser" 
# Axes limits data 
X:        0 44704 
Y:        0 27940 
Z:        0 0 
Pressure: 0 2048 
Rotation: 0 1 
T. Pres:  0 0 
[New Thread 0x7fffc7070700 (LWP 6644)]
[New Thread 0x7fffbce4c700 (LWP 6645)]
[New Thread 0x7fffb7fff700 (LWP 6646)]
[New Thread 0x7fffb77fe700 (LWP 6647)]
[New Thread 0x7fffb6ffd700 (LWP 6648)]
[New Thread 0x7fffb67fc700 (LWP 6649)]
[Thread 0x7fffb77fe700 (LWP 6647) exited]
[Thread 0x7fffb67fc700 (LWP 6649) exited]
[Thread 0x7fffb7fff700 (LWP 6646) exited]
[Thread 0x7fffc7070700 (LWP 6644) exited]
[Thread 0x7fffbce4c700 (LWP 6645) exited]
[Thread 0x7fffb6ffd700 (LWP 6648) exited]
[New Thread 0x7fffb6ffd700 (LWP 6650)]
[New Thread 0x7fffbce4c700 (LWP 6651)]
[New Thread 0x7fffc7070700 (LWP 6652)]
connect failed: No such file or directory
[Thread 0x7fffc7070700 (LWP 6652) exited]
[New Thread 0x7fffc7070700 (LWP 6653)]
[New Thread 0x7fffb7fff700 (LWP 6654)]
[New Thread 0x7fffb67fc700 (LWP 6655)]
[Thread 0x7fffb67fc700 (LWP 6655) exited]
[New Thread 0x7fffb67fc700 (LWP 6656)]
[Thread 0x7fffb67fc700 (LWP 6656) exited]
void DBusMenuExporterPrivate::addAction(QAction*, int): Already tracking action "Close" under id 35 
void DBusMenuExporterPrivate::addAction(QAction*, int): Already tracking action "Close All" under id 36 
[New Thread 0x7fffb67fc700 (LWP 6659)]
[Thread 0x7fffb67fc700 (LWP 6659) exited]
[New Thread 0x7fffb67fc700 (LWP 6661)]
[New Thread 0x7fff896fc700 (LWP 6662)]
[New Thread 0x7fff88efb700 (LWP 6663)]
[New Thread 0x7fff83fff700 (LWP 6664)]
[Thread 0x7fffb67fc700 (LWP 6661) exited]
[Thread 0x7fff88efb700 (LWP 6663) exited]
[Thread 0x7fff83fff700 (LWP 6664) exited]
[Thread 0x7fff896fc700 (LWP 6662) exited]
OpenGL version 1.1 or higher is present. 
OpenGL version 1.2 or higher is present. 
OpenGL version 1.3 or higher is present. 
OpenGL version 1.4 or higher is present. 
OpenGL version 1.5 or higher is present. 
OpenGL version 2.0 or higher is present. 
OpenGL version 2.1 or higher is present. 
OpenGL version 3.0 or higher is present. 
OpenGL version 3.1 or higher is present. 
OpenGL version 3.2 or higher is present. 
OpenGL version 3.3 or higher is present. 
OpenGL version 4.0 or higher is present. 
krita(6625)/koffice (lib komain) KoRuler::createGuideToolConnection: No guides tool found, skipping connection 
krita(6625)/koffice (lib komain) KoRuler::createGuideToolConnection: No guides tool found, skipping connection 
krita(6625) CanvasData::activateToolActions: "InteractionTool" : action "object_order_raise" conflicts with canvas action "rotate_canvas_right" shortcut: "Ctrl+]" 
krita(6625) CanvasData::activateToolActions: "InteractionTool" : action "object_order_lower" conflicts with canvas action "rotate_canvas_left" shortcut: "Ctrl+[" 
krita(6625) CanvasData::activateToolActions: "InteractionTool" : action "object_order_raise" conflicts with canvas action "rotate_canvas_right" shortcut: "Ctrl+]" 
krita(6625) CanvasData::activateToolActions: "InteractionTool" : action "object_order_lower" conflicts with canvas action "rotate_canvas_left" shortcut: "Ctrl+[" 
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
QPixmap::scaled: Pixmap is a null pixmap
uint DBusMenuExporterDBus::GetLayout(int, int, const QStringList&, DBusMenuLayoutItem&): Condition failed: menu 
[New Thread 0x7fff896fc700 (LWP 6665)]
[Thread 0x7fff896fc700 (LWP 6665) exited]

Program received signal SIGSEGV, Segmentation fault.
KoColor::data (this=0xfffffffc0791e070)
    at /home/raghu/kde4/src/calligra/libs/pigment/KoColor.cpp:248
248	    return d->data;
(gdb)
Comment 1 Christoph Feck 2015-01-17 23:13:33 UTC
Could you please type "bt" at the (gdb) prompt after it crashed, and add the backtrace here?
Comment 2 Raghavendra kamath 2015-01-18 06:10:40 UTC
raghu@raghu:~$ gdb krita
GNU gdb (Ubuntu 7.8-1ubuntu4) 7.8.0.20141001-cvs
Copyright (C) 2014 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from krita...done.
(gdb) run
Starting program: /home/raghu/kde4/inst/bin/krita 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".

(krita:3711): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",

(krita:3711): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",
/usr/share/themes/Orchis/gtk-2.0/Apps/xfce.rc:150: error: invalid string constant "combo", expected valid string constant
[New Thread 0x7fffde3a9700 (LWP 3715)]
[New Thread 0x7fffddba8700 (LWP 3716)]
################################### 
# Adding a tablet device: Wacom Intuos4 6x9 stylus 
Device Type: "Stylus" 
# Axes limits data 
X:        0 44704 
Y:        0 27940 
Z:        0 0 
Pressure: 0 2048 
Rotation: -900 899 
T. Pres:  0 0 
################################### 
# Adding a tablet device: Wacom Intuos4 6x9 eraser 
Device Type: "XFreeEraser" 
# Axes limits data 
X:        0 44704 
Y:        0 27940 
Z:        0 0 
Pressure: 0 2048 
Rotation: 0 1 
T. Pres:  0 0 
[New Thread 0x7fffc7070700 (LWP 3717)]
[New Thread 0x7fffbce4c700 (LWP 3718)]
[New Thread 0x7fffb7fff700 (LWP 3719)]
[New Thread 0x7fffb77fe700 (LWP 3720)]
[New Thread 0x7fffb6ffd700 (LWP 3721)]
[New Thread 0x7fffb67fc700 (LWP 3722)]
[Thread 0x7fffb67fc700 (LWP 3722) exited]
[Thread 0x7fffb77fe700 (LWP 3720) exited]
[Thread 0x7fffb7fff700 (LWP 3719) exited]
[Thread 0x7fffc7070700 (LWP 3717) exited]
[Thread 0x7fffbce4c700 (LWP 3718) exited]
[Thread 0x7fffb6ffd700 (LWP 3721) exited]
[New Thread 0x7fffb6ffd700 (LWP 3725)]
[New Thread 0x7fffbce4c700 (LWP 3726)]
[New Thread 0x7fffc7070700 (LWP 3727)]
connect failed: No such file or directory
[Thread 0x7fffc7070700 (LWP 3727) exited]
[New Thread 0x7fffc7070700 (LWP 3728)]
[New Thread 0x7fffb7fff700 (LWP 3729)]
[New Thread 0x7fffb67fc700 (LWP 3730)]
[Thread 0x7fffb67fc700 (LWP 3730) exited]
[New Thread 0x7fffb67fc700 (LWP 3731)]
[Thread 0x7fffb67fc700 (LWP 3731) exited]
void DBusMenuExporterPrivate::addAction(QAction*, int): Already tracking action "Close" under id 35 
void DBusMenuExporterPrivate::addAction(QAction*, int): Already tracking action "Close All" under id 36 
[New Thread 0x7fffb67fc700 (LWP 3734)]
[Thread 0x7fffb67fc700 (LWP 3734) exited]
[New Thread 0x7fffb67fc700 (LWP 3747)]
[New Thread 0x7fff857f5700 (LWP 3748)]
[New Thread 0x7fff84ff4700 (LWP 3749)]
[New Thread 0x7fff847f3700 (LWP 3750)]
[Thread 0x7fff857f5700 (LWP 3748) exited]
[Thread 0x7fff847f3700 (LWP 3750) exited]
[Thread 0x7fff84ff4700 (LWP 3749) exited]
[Thread 0x7fffb67fc700 (LWP 3747) exited]
OpenGL version 1.1 or higher is present. 
OpenGL version 1.2 or higher is present. 
OpenGL version 1.3 or higher is present. 
OpenGL version 1.4 or higher is present. 
OpenGL version 1.5 or higher is present. 
OpenGL version 2.0 or higher is present. 
OpenGL version 2.1 or higher is present. 
OpenGL version 3.0 or higher is present. 
OpenGL version 3.1 or higher is present. 
OpenGL version 3.2 or higher is present. 
OpenGL version 3.3 or higher is present. 
OpenGL version 4.0 or higher is present. 
krita(3711)/koffice (lib komain) KoRuler::createGuideToolConnection: No guides tool found, skipping connection 
krita(3711)/koffice (lib komain) KoRuler::createGuideToolConnection: No guides tool found, skipping connection 
krita(3711) CanvasData::activateToolActions: "InteractionTool" : action "object_order_raise" conflicts with canvas action "rotate_canvas_right" shortcut: "Ctrl+]" 
krita(3711) CanvasData::activateToolActions: "InteractionTool" : action "object_order_lower" conflicts with canvas action "rotate_canvas_left" shortcut: "Ctrl+[" 
krita(3711) CanvasData::activateToolActions: "InteractionTool" : action "object_order_raise" conflicts with canvas action "rotate_canvas_right" shortcut: "Ctrl+]" 
krita(3711) CanvasData::activateToolActions: "InteractionTool" : action "object_order_lower" conflicts with canvas action "rotate_canvas_left" shortcut: "Ctrl+[" 
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
QLayout: Attempting to add QLayout "" to QWidget "", which already has a layout
[New Thread 0x7fffb67fc700 (LWP 3751)]
Connecting to deprecated signal QDBusConnectionInterface::serviceOwnerChanged(QString,QString,QString)
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.

(kdeinit4: kded4 [kdeinit]:3758): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",

(kdeinit4: kded4 [kdeinit]:3758): Gtk-WARNING **: Unable to locate theme engine in module_path: "adwaita",
/usr/share/themes/Orchis/gtk-2.0/Apps/xfce.rc:150: error: invalid string constant "combo", expected valid string constant
kbuildsycoca4 running...
[New Thread 0x7fff84ff4700 (LWP 3764)]
QPixmap::scaled: Pixmap is a null pixmap
uint DBusMenuExporterDBus::GetLayout(int, int, const QStringList&, DBusMenuLayoutItem&): Condition failed: menu 
[Thread 0x7fff84ff4700 (LWP 3764) exited]

Program received signal SIGSEGV, Segmentation fault.
KoColor::data (this=0xfffffffc079da300)
    at /home/raghu/kde4/src/calligra/libs/pigment/KoColor.cpp:248
248	    return d->data;
(gdb) bt
#0  KoColor::data (this=0xfffffffc079da300)
    at /home/raghu/kde4/src/calligra/libs/pigment/KoColor.cpp:248
#1  0x00007ffff4724a54 in cachedAt (t=<optimized out>, this=0x7fffffffcac0)
    at /home/raghu/kde4/src/calligra/krita/image/kis_gradient_painter.cc:78
#2  KisGradientPainter::paintGradient (this=this@entry=0x7fffffffcce0, 
    gradientVectorStart=..., gradientVectorEnd=..., repeat=<optimized out>, 
    antiAliasThreshold=<optimized out>, reverseGradient=false, 
    startx=startx@entry=0, starty=0, width=2226, height=1775)
    at /home/raghu/kde4/src/calligra/krita/image/kis_gradient_painter.cc:700
#3  0x00007fffc4f18082 in KisToolGradient::endPrimaryAction (this=0x4aa65c0, 
    event=<optimized out>)
    at /home/raghu/kde4/src/calligra/krita/plugins/tools/defaulttools/kis_tool_gradient.cc:175
#4  0x00007ffff767037d in KisToolProxy::forwardToTool (
    this=this@entry=0x22defa0, state=state@entry=KisToolProxy::END, 
    action=action@entry=KisTool::Primary, event=event@entry=0x7fffffffd3a0, 
    docPoint=...)
    at /home/raghu/kde4/src/calligra/krita/ui/canvas/kis_tool_proxy.cpp:180
#5  0x00007ffff76706c1 in KisToolProxy::forwardEvent (this=0x22defa0, 
    state=state@entry=KisToolProxy::END, action=action@entry=KisTool::Primary, 
    event=event@entry=0x7fffffffd3a0, 
    originalEvent=originalEvent@entry=0x7fffffffd3a0, 
    lastTabletEvent=lastTabletEvent@entry=0x0)
---Type <return> to continue, or q <return> to quit---
Comment 3 Raghavendra kamath 2015-01-18 06:12:43 UTC
sorry to post half  here is the output for gdb "bt"


bt
#0  KoColor::data (this=0xfffffffc079da300)
    at /home/raghu/kde4/src/calligra/libs/pigment/KoColor.cpp:248
#1  0x00007ffff4724a54 in cachedAt (t=<optimized out>, this=0x7fffffffcac0)
    at /home/raghu/kde4/src/calligra/krita/image/kis_gradient_painter.cc:78
#2  KisGradientPainter::paintGradient (this=this@entry=0x7fffffffcce0, 
    gradientVectorStart=..., gradientVectorEnd=..., repeat=<optimized out>, 
    antiAliasThreshold=<optimized out>, reverseGradient=false, 
    startx=startx@entry=0, starty=0, width=2226, height=1775)
    at /home/raghu/kde4/src/calligra/krita/image/kis_gradient_painter.cc:700
#3  0x00007fffc4f18082 in KisToolGradient::endPrimaryAction (this=0x4aa65c0, 
    event=<optimized out>)
    at /home/raghu/kde4/src/calligra/krita/plugins/tools/defaulttools/kis_tool_gradient.cc:175
#4  0x00007ffff767037d in KisToolProxy::forwardToTool (
    this=this@entry=0x22defa0, state=state@entry=KisToolProxy::END, 
    action=action@entry=KisTool::Primary, event=event@entry=0x7fffffffd3a0, 
    docPoint=...)
    at /home/raghu/kde4/src/calligra/krita/ui/canvas/kis_tool_proxy.cpp:180
#5  0x00007ffff76706c1 in KisToolProxy::forwardEvent (this=0x22defa0, 
    state=state@entry=KisToolProxy::END, action=action@entry=KisTool::Primary, 
    event=event@entry=0x7fffffffd3a0, 
    originalEvent=originalEvent@entry=0x7fffffffd3a0, 
    lastTabletEvent=lastTabletEvent@entry=0x0)
---Type <return> to continue, or q <return> to quit---
    at /home/raghu/kde4/src/calligra/krita/ui/canvas/kis_tool_proxy.cpp:133
#6  0x00007ffff78a580b in KisToolInvocationAction::end (this=0x188c9c0, 
    event=0x7fffffffd3a0)
    at /home/raghu/kde4/src/calligra/krita/ui/input/kis_tool_invocation_action.cpp:132
#7  0x00007ffff78addc9 in KisShortcutMatcher::tryEndRunningShortcut (
    this=this@entry=0x188c4e0, button=<optimized out>, 
    event=event@entry=0x7fffffffd3a0)
    at /home/raghu/kde4/src/calligra/krita/ui/input/kis_shortcut_matcher.cpp:439
#8  0x00007ffff78ae7ea in KisShortcutMatcher::buttonReleased (this=0x188c4e0, 
    button=Qt::LeftButton, event=event@entry=0x7fffffffd3a0)
    at /home/raghu/kde4/src/calligra/krita/ui/input/kis_shortcut_matcher.cpp:193
#9  0x00007ffff78a1466 in KisInputManager::eventFilter (this=0x188c410, 
    object=<optimized out>, event=0x7fffffffd3a0)
    at /home/raghu/kde4/src/calligra/krita/ui/input/kis_input_manager.cpp:640
#10 0x00007ffff5f029d6 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#11 0x00007ffff690c0fc in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#12 0x00007ffff69129be in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
---Type <return> to continue, or q <return> to quit---
#13 0x00007ffff78d57a7 in KisApplication::notify (this=<optimized out>, 
    receiver=0x232d7b0, event=0x7fffffffd3a0)
    at /home/raghu/kde4/src/calligra/krita/ui/KisApplication.cpp:500
#14 0x00007ffff5f0286d in QCoreApplication::notifyInternal(QObject*, QEvent*)
    () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#15 0x00007ffff691207f in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#16 0x00007ffff6987bde in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#17 0x00007ffff6987477 in QApplication::x11ProcessEvent(_XEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#18 0x00007ffff69af432 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#19 0x00007fffefcf4c5d in g_main_context_dispatch ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007fffefcf4f48 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007fffefcf4ffc in g_main_context_iteration ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007ffff5f30031 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#23 0x00007ffff69af4e6 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#24 0x00007ffff5f014f1 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#25 0x00007ffff5f01805 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>---Type <return> to continue, or q <return> to quit---
) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#26 0x00007ffff5f06f67 in QCoreApplication::exec() ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#27 0x000000000040270f in main (argc=<optimized out>, argv=<optimized out>)
    at /home/raghu/kde4/src/calligra/krita/main.cc:170
(gdb)
Comment 4 Sven Langkamp 2015-01-18 13:19:50 UTC
Which gradient did you use?
Comment 5 Raghavendra kamath 2015-01-18 13:20:33 UTC
shaped gradient
Comment 6 Sven Langkamp 2015-01-18 22:26:41 UTC
Turns out that KisCachedGradientShapeStrategy::valueAt returns nan in some cases. No idea what happens there. Can you add the attach the test files to the bug?
Comment 7 mvowada 2015-01-18 22:29:16 UTC
Created attachment 90498 [details]
Krita crashes while using shaped gradient - Backtrace
Comment 8 mvowada 2015-01-18 22:31:15 UTC
I can confirm the crash on Ubuntu 14.04 Unity (backtrace in attachment in my previous comment).
Comment 9 mvowada 2015-01-18 22:35:14 UTC
Created attachment 90499 [details]
Krita crashes while using shaped gradient - Backtrace

Sorry, here is the backtrace I was referring (attachment above didn't uploaded).
Comment 10 Raghavendra kamath 2015-01-19 02:26:52 UTC
Created attachment 90504 [details]
shaped gradient test file

pleae find the attached shaped gradient test file
Comment 11 Dmitry Kazakov 2015-01-22 07:33:42 UTC
Confirm
Comment 12 Dmitry Kazakov 2015-01-25 11:56:33 UTC
Git commit 04456c99fd57806d6facf4a82e54a8addd89b285 by Dmitry Kazakov.
Committed on 25/01/2015 at 11:53.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix crash in shaped gradient with shaped smaller than 3px wide

M  +2    -0    krita/image/kis_cached_gradient_shape_strategy.cpp
M  +13   -6    krita/image/kis_gradient_painter.cc

http://commits.kde.org/calligra/04456c99fd57806d6facf4a82e54a8addd89b285