Fix crash in shaped gradient with shaped smaller than 3px wide

BUG:342942